@@ -37,6 +37,7 @@ Version 1.7.0+svn:
    * Properly translate dialog title (bug #13761)
    * Fixed a problem with easy close that caused buttons to be ignored
    * Properly translate unit name (bug #13751)
+   * Properly redraw logo on the loading screen (bug #13758)
    * Set window title before setting video mode (bug #13756)
 
 Version 1.7.0:
